# jsonlogprint

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml  test.yml
generate-logs/: Cargo.toml  README.md
generate-logs/src/: main.rs
jsonlogprint/: Cargo.toml
jsonlogprint/src/: cfg.rs  deser.rs  main.rs  styler.rs
jsonlogprint/wix/: main.wxs
src/: deser.rs  main.rs  styler.rs
