[package]
name = "jsonlogprint"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = { version = "2.1.0" }
indexmap = { version = "2.6.0", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive", "serde_derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
